# routers/commentsRouter_controllers.go
@@ -18,72 +18,18 @@ func init() {
 
     beego.GlobalControllerRouter["gofa/controllers:GroupController"] = append(beego.GlobalControllerRouter["gofa/controllers:GroupController"],
         beego.ControllerComments{
+            Method: "SearchFace",
+            Router: `/searchface`,
+            AllowHTTPMethods: []string{"post"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["gofa/controllers:GroupController"] = append(beego.GlobalControllerRouter["gofa/controllers:GroupController"],
+        beego.ControllerComments{
             Method: "UserList",
             Router: `/userlist`,
             AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["gofa/controllers:UserController"] = append(beego.GlobalControllerRouter["gofa/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Post",
-            Router: `/`,
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["gofa/controllers:UserController"] = append(beego.GlobalControllerRouter["gofa/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: `/`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["gofa/controllers:UserController"] = append(beego.GlobalControllerRouter["gofa/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["gofa/controllers:UserController"] = append(beego.GlobalControllerRouter["gofa/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["gofa/controllers:UserController"] = append(beego.GlobalControllerRouter["gofa/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["gofa/controllers:UserController"] = append(beego.GlobalControllerRouter["gofa/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Login",
-            Router: `/login`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["gofa/controllers:UserController"] = append(beego.GlobalControllerRouter["gofa/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Logout",
-            Router: `/logout`,
-            AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
